# gigachadkr_bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  main.rs
