[package]
name = "gigachadbot"
version = "0.1.0"
edition = "2021"

[dependencies]
openai = "1.0.0-alpha.18"
dotenvy = "0.15.7"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.43", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = "1.0"